[metadata]
# replace with your username:
name = PyJournal-rlothbrock
version = 0.0.1
author = rlothbrock.10
author_email = rlothbrock.10@gmail.com
description = A non proffessional app for managing inventories and keep a small store
long_description = file: README.md
license = file: LICENSE
long_description_content_type = text/markdown
url = https://github.com/rlothbrock/PyJournal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8